--- a/N320_coursework/labs/week04/animation.html
+++ b/N320_coursework/labs/week04/animation.html
@@ -24,6 +24,7 @@
       height: 100px;
       animation: bannerBuildIn 2s;
       animation-fill-mode: both;
+      margin-top: 60px;
     }
     .box {
       background-color: purple;
@@ -33,7 +34,7 @@
       animation: boxBuildIn 2s;
       animation-fill-mode: both;
       margin-top: 50px;
-      margin-left: 50px;
+      margin-left: 100px;
     }
     /*title*/
     .titleOver {
