--- a/N320_coursework/labs/final/index.html
+++ b/N320_coursework/labs/final/index.html
@@ -30,7 +30,7 @@
       width: 150px;
       height: 90px;
       padding: 3px;
-      background-image: url(../images/machTex.png);
+      background-image: url(images/machTex.png);
       background-repeat: no-repeat;
       background-size: cover;
       font-size: 13px;
@@ -48,7 +48,7 @@
       width: 150px;
       height: 90px;
       padding: 3px;
-      background-image: url(../images/cardTexture.png);
+      background-image: url(images/cardTexture.png);
       background-repeat: no-repeat;
       background-size: cover;
       font-size: 13px;
@@ -67,7 +67,7 @@
       width: 150px;
       height: 90px;
       padding: 3px;
-      background-image: url(../images/gun.png);
+      background-image: url(images/gun.png);
       background-repeat: no-repeat;
       background-size: cover;
       font-size: 13px;
@@ -85,7 +85,7 @@
       width: 150px;
       height: 90px;
       padding: 3px;
-      background-image: url(../images/legTex.png);
+      background-image: url(images/legTex.png);
       background-repeat: no-repeat;
       background-size: cover;
       font-size: 13px;
@@ -269,7 +269,7 @@
       width: 100px;
       height: 40px;
       background-color: black;
-      background-image: url(../images/screen.jpg);
+      background-image: url(images/screen.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       border: 2px solid white;
@@ -282,7 +282,7 @@
       width: 100px;
       height: 40px;
       background-color: black;
-      background-image: url(../images/screen.jpg);
+      background-image: url(images/screen.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       border: 2px solid white;
@@ -295,7 +295,7 @@
       width: 100px;
       height: 40px;
       background-color: black;
-      background-image: url(../images/screen.jpg);
+      background-image: url(images/screen.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       border: 2px solid white;
@@ -308,7 +308,7 @@
       width: 100px;
       height: 40px;
       background-color: black;
-      background-image: url(../images/screen.jpg);
+      background-image: url(images/screen.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       border: 2px solid white;
@@ -321,7 +321,7 @@
       width: 100px;
       height: 40px;
       background-color: black;
-      background-image: url(../images/screen.jpg);
+      background-image: url(images/screen.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       border: 2px solid white;
@@ -332,7 +332,7 @@
       width: 400px;
       height: 300px;
       margin-top: -587px;
-      background-image: url(../images/hanger.jpg);
+      background-image: url(images/hanger.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       background-color: white;
